--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -27,7 +27,7 @@ body {
 }
 
 main {
-    width: 45%;
+    width: 65%;
     margin: 0 auto;
 }
 
@@ -35,10 +35,10 @@ main {
     display: flex;
     margin: auto;
     font-family: 'Titillium Web', sans-serif;
-    margin-top: 15px;
     justify-content: center;
     align-items: center;
     font-size: 1.05em;
+    margin-bottom: 35px;
 }
 
 input {
@@ -50,10 +50,10 @@ input {
 
 .section-container {
     background: whitesmoke;
-    padding: 25px;
+    padding: 40px;
     margin: auto;
     margin-top: 50px;
-    max-width: 500px;
+    max-width: 650px;
 }
 
 .item-container {
