--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -38,7 +38,7 @@ main {
     justify-content: center;
     align-items: center;
     font-size: 1.05em;
-    margin-bottom: 35px;
+    /* margin-bottom: 35px; */
 }
 
 input {
@@ -50,17 +50,26 @@ input {
 
 .section-container {
     background: whitesmoke;
-    padding: 40px;
+    padding: 15px;
     margin: auto;
     margin-top: 50px;
     max-width: 650px;
+}
+
+ul {
+    max-width: 650px;
+    margin: auto;
+    background: whitesmoke;
+    padding: 15px;
+    margin-top: 10px;
 }
 
 .item-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 25px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .item-header {
@@ -90,4 +99,8 @@ button {
     background: rgb(192, 131, 131);
     color: white;
     margin-left: 5px;
+}
+
+.completed {
+    text-decoration: line-through;
 }
