a lot of progress on writing necessary code

--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -104,3 +104,10 @@ button {
 .completed {
     text-decoration: line-through;
 }
+
+.error {
+    font-family: monospace;
+    color: darkred;
+    text-align: center;
+    margin-top: 15px;
+}
