TRAVIS PASS PLEASE

--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -59,7 +59,7 @@ input {
 ul {
     max-width: 650px;
     margin: auto;
-    background: whitesmoke;
+    background: white;
     padding: 15px;
     margin-top: 10px;
 }
