--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -111,3 +111,30 @@ button {
     text-align: center;
     margin-top: 15px;
 }
+
+@media only screen and (max-width: 650px) {
+    .input-container {
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        margin: auto;
+        /* width: 350px; */
+    }
+
+    input {
+        margin-top: 15px;
+    }
+
+    .add-button {
+        margin-top: 15px;
+    }
+
+    main {
+        width: 90%;
+    }
+
+    .section-container {
+        /* width: 350px; */
+    }
+    
+  }
